k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: bookreview
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: br_backend:1.0
        ports:
        - containerPort: 4000
        env: # <--- ADD THIS SECTION
        - name: MONGO_URI
          value: "mongodb://admin:password@mongo-service:27017/bookreview?authSource=admin"
        
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: bookreview
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
