k8s/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: bookreview
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: br_frontend:1.0
        ports:
        - containerPort: 80
#        volumeMounts:
#          - name: frontend-volume
#            mountPath: /usr/share/nginx/html
#      volumes:
#        - name: frontend-volume
#          persistentVolumeClaim:
#            claimName: frontend-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: bookreview
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
