k8s/mongodb-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-deployment
  namespace: bookreview
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:8.2.2-noble
        ports:
        - containerPort: 27017
        volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 2Gi
        
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: bookreview
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
