k8s/mongoexp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexp-deployment
  namespace: bookreview
  labels:
    app: mongoexp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoexp
  template:
    metadata:
      labels:
        app: mongoexp
    spec:
      containers:
      - name: mongoexp
        image: mongo-express:1.0.2-20-alpine3.19
        ports:
        - containerPort: 8081
        volumeMounts:
          - name: mongo-pvc
            mountPath: /data
      volumes:
        - name: mongo-pvc
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongoexp-service
  namespace: bookreview
spec:
  selector:
    app: mongoexp
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
